466/ps02/par.output
Terminals unused in grammar

   TOKEOF
   LTEQ
   GTEQ
   BREAK
   CASE
   CHAR
   CONST
   CONTINUE
   DEFAULT
   DO
   DOUBLE
   ELSE
   ENUM
   EXTERN
   FLOAT
   FOR
   GOTO
   IF
   INLINE
   REGISTER
   RESTRICT
   RETURN
   SIGNED
   STRUCT
   SWITCH
   TYPEDEF
   UNION
   VOID
   WHILE
   _BOOL
   _COMPLEX
   _IMAGINARY


State 17 conflicts: 17 shift/reduce
State 38 conflicts: 18 shift/reduce
State 154 conflicts: 1 shift/reduce


Grammar

    0 $accept: cont $end

    1 cont: valid
    2     | cont valid

    3 valid: declaration
    4      | func_decl
    5      | func

    6 declaration: INT ident_list ';'

    7 ident_list: IDENT
    8           | ident_list ',' IDENT

    9 func_decl: IDENT '(' ')' ';'

   10 func: IDENT '(' ')' code_block

   11 code_block: '{' func_lines '}'

   12 func_line: %empty
   13          | declaration
   14          | statement
   15          | code_block

   16 func_lines: func_line
   17           | func_lines func_line

   18 statement: ';'
   19          | expr ';'

   20 prec_1: IDENT
   21       | NUMBER
   22       | CHARLIT
   23       | STRING
   24       | IDENT '[' expr ']'
   25       | IDENT '(' args_list ')'
   26       | IDENT '(' ')'
   27       | '(' expr ')'
   28       | IDENT '.' IDENT
   29       | IDENT INDSEL IDENT
   30       | prec_1 PLUSPLUS
   31       | prec_1 MINUSMINUS

   32 args_list: types IDENT
   33          | args_list ',' args_list
   34          | args_list ',' ELLIPSIS

   35 prec_2: prec_1
   36       | PLUSPLUS prec_1
   37       | MINUSMINUS prec_1
   38       | SIZEOF prec_1
   39       | '~' prec_1
   40       | '!' prec_1
   41       | '+' prec_1
   42       | '-' prec_1
   43       | '&' prec_1
   44       | '*' prec_1

   45 prec_3: prec_2
   46       | '(' types ')' prec_3

   47 types: quals prim_types

   48 quals: UNSIGNED
   49      | AUTO
   50      | STATIC
   51      | VOLATILE

   52 prim_types: INT
   53           | LONG
   54           | SHORT

   55 prec_4: prec_3
   56       | prec_4 '*' prec_3
   57       | prec_4 '/' prec_3
   58       | prec_4 '%' prec_3

   59 prec_5: prec_4
   60       | prec_5 '+' prec_4
   61       | prec_5 '-' prec_4

   62 prec_6: prec_5
   63       | prec_6 SHL prec_5
   64       | prec_6 SHR prec_5

   65 prec_7: prec_6
   66       | prec_7 EQEQ prec_6
   67       | prec_7 NOTEQ prec_6

   68 prec_8: prec_7
   69       | prec_8 '&' prec_7

   70 prec_9: prec_8
   71       | prec_9 '^' prec_8

   72 prec_10: prec_9
   73        | prec_10 '|' prec_9

   74 prec_11: prec_10
   75        | prec_11 LOGAND prec_10

   76 prec_12: prec_11
   77        | prec_12 LOGOR prec_11

   78 prec_13: prec_12
   79        | prec_12 '?' expr ':' prec_13

   80 prec_14: prec_13
   81        | prec_13 '=' prec_14
   82        | prec_13 PLUSEQ prec_14
   83        | prec_13 MINUSEQ prec_14
   84        | prec_13 TIMESEQ prec_14
   85        | prec_13 DIVEQ prec_14
   86        | prec_13 MODEQ prec_14
   87        | prec_13 SHLEQ prec_14
   88        | prec_13 SHREQ prec_14
   89        | prec_13 ANDEQ prec_14
   90        | prec_13 OREQ prec_14
   91        | prec_13 XOREQ prec_14

   92 expr: prec_14
   93     | expr ',' prec_14


Terminals, with rules where they appear

$end (0) 0
'!' (33) 40
'%' (37) 58
'&' (38) 43 69
'(' (40) 9 10 25 26 27 46
')' (41) 9 10 25 26 27 46
'*' (42) 44 56
'+' (43) 41 60
',' (44) 8 33 34 93
'-' (45) 42 61
'.' (46) 28
'/' (47) 57
':' (58) 79
';' (59) 6 9 18 19
'=' (61) 81
'?' (63) 79
'[' (91) 24
']' (93) 24
'^' (94) 71
'{' (123) 11
'|' (124) 73
'}' (125) 11
'~' (126) 39
error (256)
TOKEOF (258)
IDENT (259) 7 8 9 10 20 24 25 26 28 29 32
CHARLIT (260) 22
STRING (261) 23
NUMBER (262) 21
INDSEL (263) 29
PLUSPLUS (264) 30 36
MINUSMINUS (265) 31 37
SHL (266) 63
SHR (267) 64
LTEQ (268)
GTEQ (269)
EQEQ (270) 66
NOTEQ (271) 67
LOGAND (272) 75
LOGOR (273) 77
ELLIPSIS (274) 34
TIMESEQ (275) 84
DIVEQ (276) 85
MODEQ (277) 86
PLUSEQ (278) 82
MINUSEQ (279) 83
SHLEQ (280) 87
SHREQ (281) 88
ANDEQ (282) 89
OREQ (283) 90
XOREQ (284) 91
AUTO (285) 49
BREAK (286)
CASE (287)
CHAR (288)
CONST (289)
CONTINUE (290)
DEFAULT (291)
DO (292)
DOUBLE (293)
ELSE (294)
ENUM (295)
EXTERN (296)
FLOAT (297)
FOR (298)
GOTO (299)
IF (300)
INLINE (301)
INT (302) 6 52
LONG (303) 53
REGISTER (304)
RESTRICT (305)
RETURN (306)
SHORT (307) 54
SIGNED (308)
SIZEOF (309) 38
STATIC (310) 50
STRUCT (311)
SWITCH (312)
TYPEDEF (313)
UNION (314)
UNSIGNED (315) 48
VOID (316)
VOLATILE (317) 51
WHILE (318)
_BOOL (319)
_COMPLEX (320)
_IMAGINARY (321)


Nonterminals, with rules where they appear

$accept (89)
    on left: 0
cont (90)
    on left: 1 2, on right: 0 2
valid (91)
    on left: 3 4 5, on right: 1 2
declaration (92)
    on left: 6, on right: 3 13
ident_list (93)
    on left: 7 8, on right: 6 8
func_decl (94)
    on left: 9, on right: 4
func (95)
    on left: 10, on right: 5
code_block (96)
    on left: 11, on right: 10 15
func_line (97)
    on left: 12 13 14 15, on right: 16 17
func_lines (98)
    on left: 16 17, on right: 11 17
statement (99)
    on left: 18 19, on right: 14
prec_1 (100)
    on left: 20 21 22 23 24 25 26 27 28 29 30 31, on right: 30 31 35
    36 37 38 39 40 41 42 43 44
args_list (101)
    on left: 32 33 34, on right: 25 33 34
prec_2 (102)
    on left: 35 36 37 38 39 40 41 42 43 44, on right: 45
prec_3 (103)
    on left: 45 46, on right: 46 55 56 57 58
types (104)
    on left: 47, on right: 32 46
quals (105)
    on left: 48 49 50 51, on right: 47
prim_types (106)
    on left: 52 53 54, on right: 47
prec_4 (107)
    on left: 55 56 57 58, on right: 56 57 58 59 60 61
prec_5 (108)
    on left: 59 60 61, on right: 60 61 62 63 64
prec_6 (109)
    on left: 62 63 64, on right: 63 64 65 66 67
prec_7 (110)
    on left: 65 66 67, on right: 66 67 68 69
prec_8 (111)
    on left: 68 69, on right: 69 70 71
prec_9 (112)
    on left: 70 71, on right: 71 72 73
prec_10 (113)
    on left: 72 73, on right: 73 74 75
prec_11 (114)
    on left: 74 75, on right: 75 76 77
prec_12 (115)
    on left: 76 77, on right: 77 78 79
prec_13 (116)
    on left: 78 79, on right: 79 80 81 82 83 84 85 86 87 88 89 90 91
prec_14 (117)
    on left: 80 81 82 83 84 85 86 87 88 89 90 91, on right: 81 82 83
    84 85 86 87 88 89 90 91 92 93
expr (118)
    on left: 92 93, on right: 19 24 27 79 93


State 0

    0 $accept: . cont $end

    IDENT  shift, and go to state 1
    INT    shift, and go to state 2

    cont         go to state 3
    valid        go to state 4
    declaration  go to state 5
    func_decl    go to state 6
    func         go to state 7


State 1

    9 func_decl: IDENT . '(' ')' ';'
   10 func: IDENT . '(' ')' code_block

    '('  shift, and go to state 8


State 2

    6 declaration: INT . ident_list ';'

    IDENT  shift, and go to state 9

    ident_list  go to state 10


State 3

    0 $accept: cont . $end
    2 cont: cont . valid

    $end   shift, and go to state 11
    IDENT  shift, and go to state 1
    INT    shift, and go to state 2

    valid        go to state 12
    declaration  go to state 5
    func_decl    go to state 6
    func         go to state 7


State 4

    1 cont: valid .

    $default  reduce using rule 1 (cont)


State 5

    3 valid: declaration .

    $default  reduce using rule 3 (valid)


State 6

    4 valid: func_decl .

    $default  reduce using rule 4 (valid)


State 7

    5 valid: func .

    $default  reduce using rule 5 (valid)


State 8

    9 func_decl: IDENT '(' . ')' ';'
   10 func: IDENT '(' . ')' code_block

    ')'  shift, and go to state 13


State 9

    7 ident_list: IDENT .

    $default  reduce using rule 7 (ident_list)


State 10

    6 declaration: INT ident_list . ';'
    8 ident_list: ident_list . ',' IDENT

    ';'  shift, and go to state 14
    ','  shift, and go to state 15


State 11

    0 $accept: cont $end .

    $default  accept


State 12

    2 cont: cont valid .

    $default  reduce using rule 2 (cont)


State 13

    9 func_decl: IDENT '(' ')' . ';'
   10 func: IDENT '(' ')' . code_block

    ';'  shift, and go to state 16
    '{'  shift, and go to state 17

    code_block  go to state 18


State 14

    6 declaration: INT ident_list ';' .

    $default  reduce using rule 6 (declaration)


State 15

    8 ident_list: ident_list ',' . IDENT

    IDENT  shift, and go to state 19


State 16

    9 func_decl: IDENT '(' ')' ';' .

    $default  reduce using rule 9 (func_decl)


State 17

   11 code_block: '{' . func_lines '}'

    IDENT       shift, and go to state 20
    CHARLIT     shift, and go to state 21
    STRING      shift, and go to state 22
    NUMBER      shift, and go to state 23
    PLUSPLUS    shift, and go to state 24
    MINUSMINUS  shift, and go to state 25
    INT         shift, and go to state 2
    SIZEOF      shift, and go to state 26
    ';'         shift, and go to state 27
    '('         shift, and go to state 28
    '{'         shift, and go to state 17
    '~'         shift, and go to state 29
    '!'         shift, and go to state 30
    '+'         shift, and go to state 31
    '-'         shift, and go to state 32
    '&'         shift, and go to state 33
    '*'         shift, and go to state 34

    IDENT       [reduce using rule 12 (func_line)]
    CHARLIT     [reduce using rule 12 (func_line)]
    STRING      [reduce using rule 12 (func_line)]
    NUMBER      [reduce using rule 12 (func_line)]
    PLUSPLUS    [reduce using rule 12 (func_line)]
    MINUSMINUS  [reduce using rule 12 (func_line)]
    INT         [reduce using rule 12 (func_line)]
    SIZEOF      [reduce using rule 12 (func_line)]
    ';'         [reduce using rule 12 (func_line)]
    '('         [reduce using rule 12 (func_line)]
    '{'         [reduce using rule 12 (func_line)]
    '~'         [reduce using rule 12 (func_line)]
    '!'         [reduce using rule 12 (func_line)]
    '+'         [reduce using rule 12 (func_line)]
    '-'         [reduce using rule 12 (func_line)]
    '&'         [reduce using rule 12 (func_line)]
    '*'         [reduce using rule 12 (func_line)]
    $default    reduce using rule 12 (func_line)

    declaration  go to state 35
    code_block   go to state 36
    func_line    go to state 37
    func_lines   go to state 38
    statement    go to state 39
    prec_1       go to state 40
    prec_2       go to state 41
    prec_3       go to state 42
    prec_4       go to state 43
    prec_5       go to state 44
    prec_6       go to state 45
    prec_7       go to state 46
    prec_8       go to state 47
    prec_9       go to state 48
    prec_10      go to state 49
    prec_11      go to state 50
    prec_12      go to state 51
    prec_13      go to state 52
    prec_14      go to state 53
    expr         go to state 54


State 18

   10 func: IDENT '(' ')' code_block .

    $default  reduce using rule 10 (func)


State 19

    8 ident_list: ident_list ',' IDENT .

    $default  reduce using rule 8 (ident_list)


State 20

   20 prec_1: IDENT .
   24       | IDENT . '[' expr ']'
   25       | IDENT . '(' args_list ')'
   26       | IDENT . '(' ')'
   28       | IDENT . '.' IDENT
   29       | IDENT . INDSEL IDENT

    INDSEL  shift, and go to state 55
    '('     shift, and go to state 56
    '['     shift, and go to state 57
    '.'     shift, and go to state 58

    $default  reduce using rule 20 (prec_1)


State 21

   22 prec_1: CHARLIT .

    $default  reduce using rule 22 (prec_1)


State 22

   23 prec_1: STRING .

    $default  reduce using rule 23 (prec_1)


State 23

   21 prec_1: NUMBER .

    $default  reduce using rule 21 (prec_1)


State 24

   36 prec_2: PLUSPLUS . prec_1

    IDENT    shift, and go to state 20
    CHARLIT  shift, and go to state 21
    STRING   shift, and go to state 22
    NUMBER   shift, and go to state 23
    '('      shift, and go to state 59

    prec_1  go to state 60


State 25

   37 prec_2: MINUSMINUS . prec_1

    IDENT    shift, and go to state 20
    CHARLIT  shift, and go to state 21
    STRING   shift, and go to state 22
    NUMBER   shift, and go to state 23
    '('      shift, and go to state 59

    prec_1  go to state 61


State 26

   38 prec_2: SIZEOF . prec_1

    IDENT    shift, and go to state 20
    CHARLIT  shift, and go to state 21
    STRING   shift, and go to state 22
    NUMBER   shift, and go to state 23
    '('      shift, and go to state 59

    prec_1  go to state 62


State 27

   18 statement: ';' .

    $default  reduce using rule 18 (statement)


State 28

   27 prec_1: '(' . expr ')'
   46 prec_3: '(' . types ')' prec_3

    IDENT       shift, and go to state 20
    CHARLIT     shift, and go to state 21
    STRING      shift, and go to state 22
    NUMBER      shift, and go to state 23
    PLUSPLUS    shift, and go to state 24
    MINUSMINUS  shift, and go to state 25
    AUTO        shift, and go to state 63
    SIZEOF      shift, and go to state 26
    STATIC      shift, and go to state 64
    UNSIGNED    shift, and go to state 65
    VOLATILE    shift, and go to state 66
    '('         shift, and go to state 28
    '~'         shift, and go to state 29
    '!'         shift, and go to state 30
    '+'         shift, and go to state 31
    '-'         shift, and go to state 32
    '&'         shift, and go to state 33
    '*'         shift, and go to state 34

    prec_1   go to state 40
    prec_2   go to state 41
    prec_3   go to state 42
    types    go to state 67
    quals    go to state 68
    prec_4   go to state 43
    prec_5   go to state 44
    prec_6   go to state 45
    prec_7   go to state 46
    prec_8   go to state 47
    prec_9   go to state 48
    prec_10  go to state 49
    prec_11  go to state 50
    prec_12  go to state 51
    prec_13  go to state 52
    prec_14  go to state 53
    expr     go to state 69


State 29

   39 prec_2: '~' . prec_1

    IDENT    shift, and go to state 20
    CHARLIT  shift, and go to state 21
    STRING   shift, and go to state 22
    NUMBER   shift, and go to state 23
    '('      shift, and go to state 59

    prec_1  go to state 70


State 30

   40 prec_2: '!' . prec_1

    IDENT    shift, and go to state 20
    CHARLIT  shift, and go to state 21
    STRING   shift, and go to state 22
    NUMBER   shift, and go to state 23
    '('      shift, and go to state 59

    prec_1  go to state 71


State 31

   41 prec_2: '+' . prec_1

    IDENT    shift, and go to state 20
    CHARLIT  shift, and go to state 21
    STRING   shift, and go to state 22
    NUMBER   shift, and go to state 23
    '('      shift, and go to state 59

    prec_1  go to state 72


State 32

   42 prec_2: '-' . prec_1

    IDENT    shift, and go to state 20
    CHARLIT  shift, and go to state 21
    STRING   shift, and go to state 22
    NUMBER   shift, and go to state 23
    '('      shift, and go to state 59

    prec_1  go to state 73


State 33

   43 prec_2: '&' . prec_1

    IDENT    shift, and go to state 20
    CHARLIT  shift, and go to state 21
    STRING   shift, and go to state 22
    NUMBER   shift, and go to state 23
    '('      shift, and go to state 59

    prec_1  go to state 74


State 34

   44 prec_2: '*' . prec_1

    IDENT    shift, and go to state 20
    CHARLIT  shift, and go to state 21
    STRING   shift, and go to state 22
    NUMBER   shift, and go to state 23
    '('      shift, and go to state 59

    prec_1  go to state 75


State 35

   13 func_line: declaration .

    $default  reduce using rule 13 (func_line)


State 36

   15 func_line: code_block .

    $default  reduce using rule 15 (func_line)


State 37

   16 func_lines: func_line .

    $default  reduce using rule 16 (func_lines)


State 38

   11 code_block: '{' func_lines . '}'
   17 func_lines: func_lines . func_line

    IDENT       shift, and go to state 20
    CHARLIT     shift, and go to state 21
    STRING      shift, and go to state 22
    NUMBER      shift, and go to state 23
    PLUSPLUS    shift, and go to state 24
    MINUSMINUS  shift, and go to state 25
    INT         shift, and go to state 2
    SIZEOF      shift, and go to state 26
    ';'         shift, and go to state 27
    '('         shift, and go to state 28
    '{'         shift, and go to state 17
    '}'         shift, and go to state 76
    '~'         shift, and go to state 29
    '!'         shift, and go to state 30
    '+'         shift, and go to state 31
    '-'         shift, and go to state 32
    '&'         shift, and go to state 33
    '*'         shift, and go to state 34

    IDENT       [reduce using rule 12 (func_line)]
    CHARLIT     [reduce using rule 12 (func_line)]
    STRING      [reduce using rule 12 (func_line)]
    NUMBER      [reduce using rule 12 (func_line)]
    PLUSPLUS    [reduce using rule 12 (func_line)]
    MINUSMINUS  [reduce using rule 12 (func_line)]
    INT         [reduce using rule 12 (func_line)]
    SIZEOF      [reduce using rule 12 (func_line)]
    ';'         [reduce using rule 12 (func_line)]
    '('         [reduce using rule 12 (func_line)]
    '{'         [reduce using rule 12 (func_line)]
    '}'         [reduce using rule 12 (func_line)]
    '~'         [reduce using rule 12 (func_line)]
    '!'         [reduce using rule 12 (func_line)]
    '+'         [reduce using rule 12 (func_line)]
    '-'         [reduce using rule 12 (func_line)]
    '&'         [reduce using rule 12 (func_line)]
    '*'         [reduce using rule 12 (func_line)]

    declaration  go to state 35
    code_block   go to state 36
    func_line    go to state 77
    statement    go to state 39
    prec_1       go to state 40
    prec_2       go to state 41
    prec_3       go to state 42
    prec_4       go to state 43
    prec_5       go to state 44
    prec_6       go to state 45
    prec_7       go to state 46
    prec_8       go to state 47
    prec_9       go to state 48
    prec_10      go to state 49
    prec_11      go to state 50
    prec_12      go to state 51
    prec_13      go to state 52
    prec_14      go to state 53
    expr         go to state 54


State 39

   14 func_line: statement .

    $default  reduce using rule 14 (func_line)


State 40

   30 prec_1: prec_1 . PLUSPLUS
   31       | prec_1 . MINUSMINUS
   35 prec_2: prec_1 .

    PLUSPLUS    shift, and go to state 78
    MINUSMINUS  shift, and go to state 79

    $default  reduce using rule 35 (prec_2)


State 41

   45 prec_3: prec_2 .

    $default  reduce using rule 45 (prec_3)


State 42

   55 prec_4: prec_3 .

    $default  reduce using rule 55 (prec_4)


State 43

   56 prec_4: prec_4 . '*' prec_3
   57       | prec_4 . '/' prec_3
   58       | prec_4 . '%' prec_3
   59 prec_5: prec_4 .

    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82

    $default  reduce using rule 59 (prec_5)


State 44

   60 prec_5: prec_5 . '+' prec_4
   61       | prec_5 . '-' prec_4
   62 prec_6: prec_5 .

    '+'  shift, and go to state 83
    '-'  shift, and go to state 84

    $default  reduce using rule 62 (prec_6)


State 45

   63 prec_6: prec_6 . SHL prec_5
   64       | prec_6 . SHR prec_5
   65 prec_7: prec_6 .

    SHL  shift, and go to state 85
    SHR  shift, and go to state 86

    $default  reduce using rule 65 (prec_7)


State 46

   66 prec_7: prec_7 . EQEQ prec_6
   67       | prec_7 . NOTEQ prec_6
   68 prec_8: prec_7 .

    EQEQ   shift, and go to state 87
    NOTEQ  shift, and go to state 88

    $default  reduce using rule 68 (prec_8)


State 47

   69 prec_8: prec_8 . '&' prec_7
   70 prec_9: prec_8 .

    '&'  shift, and go to state 89

    $default  reduce using rule 70 (prec_9)


State 48

   71 prec_9: prec_9 . '^' prec_8
   72 prec_10: prec_9 .

    '^'  shift, and go to state 90

    $default  reduce using rule 72 (prec_10)


State 49

   73 prec_10: prec_10 . '|' prec_9
   74 prec_11: prec_10 .

    '|'  shift, and go to state 91

    $default  reduce using rule 74 (prec_11)


State 50

   75 prec_11: prec_11 . LOGAND prec_10
   76 prec_12: prec_11 .

    LOGAND  shift, and go to state 92

    $default  reduce using rule 76 (prec_12)


State 51

   77 prec_12: prec_12 . LOGOR prec_11
   78 prec_13: prec_12 .
   79        | prec_12 . '?' expr ':' prec_13

    LOGOR  shift, and go to state 93
    '?'    shift, and go to state 94

    $default  reduce using rule 78 (prec_13)


State 52

   80 prec_14: prec_13 .
   81        | prec_13 . '=' prec_14
   82        | prec_13 . PLUSEQ prec_14
   83        | prec_13 . MINUSEQ prec_14
   84        | prec_13 . TIMESEQ prec_14
   85        | prec_13 . DIVEQ prec_14
   86        | prec_13 . MODEQ prec_14
   87        | prec_13 . SHLEQ prec_14
   88        | prec_13 . SHREQ prec_14
   89        | prec_13 . ANDEQ prec_14
   90        | prec_13 . OREQ prec_14
   91        | prec_13 . XOREQ prec_14

    TIMESEQ  shift, and go to state 95
    DIVEQ    shift, and go to state 96
    MODEQ    shift, and go to state 97
    PLUSEQ   shift, and go to state 98
    MINUSEQ  shift, and go to state 99
    SHLEQ    shift, and go to state 100
    SHREQ    shift, and go to state 101
    ANDEQ    shift, and go to state 102
    OREQ     shift, and go to state 103
    XOREQ    shift, and go to state 104
    '='      shift, and go to state 105

    $default  reduce using rule 80 (prec_14)


State 53

   92 expr: prec_14 .

    $default  reduce using rule 92 (expr)


State 54

   19 statement: expr . ';'
   93 expr: expr . ',' prec_14

    ';'  shift, and go to state 106
    ','  shift, and go to state 107


State 55

   29 prec_1: IDENT INDSEL . IDENT

    IDENT  shift, and go to state 108


State 56

   25 prec_1: IDENT '(' . args_list ')'
   26       | IDENT '(' . ')'

    AUTO      shift, and go to state 63
    STATIC    shift, and go to state 64
    UNSIGNED  shift, and go to state 65
    VOLATILE  shift, and go to state 66
    ')'       shift, and go to state 109

    args_list  go to state 110
    types      go to state 111
    quals      go to state 68


State 57

   24 prec_1: IDENT '[' . expr ']'

    IDENT       shift, and go to state 20
    CHARLIT     shift, and go to state 21
    STRING      shift, and go to state 22
    NUMBER      shift, and go to state 23
    PLUSPLUS    shift, and go to state 24
    MINUSMINUS  shift, and go to state 25
    SIZEOF      shift, and go to state 26
    '('         shift, and go to state 28
    '~'         shift, and go to state 29
    '!'         shift, and go to state 30
    '+'         shift, and go to state 31
    '-'         shift, and go to state 32
    '&'         shift, and go to state 33
    '*'         shift, and go to state 34

    prec_1   go to state 40
    prec_2   go to state 41
    prec_3   go to state 42
    prec_4   go to state 43
    prec_5   go to state 44
    prec_6   go to state 45
    prec_7   go to state 46
    prec_8   go to state 47
    prec_9   go to state 48
    prec_10  go to state 49
    prec_11  go to state 50
    prec_12  go to state 51
    prec_13  go to state 52
    prec_14  go to state 53
    expr     go to state 112


State 58

   28 prec_1: IDENT '.' . IDENT

    IDENT  shift, and go to state 113


State 59

   27 prec_1: '(' . expr ')'

    IDENT       shift, and go to state 20
    CHARLIT     shift, and go to state 21
    STRING      shift, and go to state 22
    NUMBER      shift, and go to state 23
    PLUSPLUS    shift, and go to state 24
    MINUSMINUS  shift, and go to state 25
    SIZEOF      shift, and go to state 26
    '('         shift, and go to state 28
    '~'         shift, and go to state 29
    '!'         shift, and go to state 30
    '+'         shift, and go to state 31
    '-'         shift, and go to state 32
    '&'         shift, and go to state 33
    '*'         shift, and go to state 34

    prec_1   go to state 40
    prec_2   go to state 41
    prec_3   go to state 42
    prec_4   go to state 43
    prec_5   go to state 44
    prec_6   go to state 45
    prec_7   go to state 46
    prec_8   go to state 47
    prec_9   go to state 48
    prec_10  go to state 49
    prec_11  go to state 50
    prec_12  go to state 51
    prec_13  go to state 52
    prec_14  go to state 53
    expr     go to state 69


State 60

   30 prec_1: prec_1 . PLUSPLUS
   31       | prec_1 . MINUSMINUS
   36 prec_2: PLUSPLUS prec_1 .

    PLUSPLUS    shift, and go to state 78
    MINUSMINUS  shift, and go to state 79

    $default  reduce using rule 36 (prec_2)


State 61

   30 prec_1: prec_1 . PLUSPLUS
   31       | prec_1 . MINUSMINUS
   37 prec_2: MINUSMINUS prec_1 .

    PLUSPLUS    shift, and go to state 78
    MINUSMINUS  shift, and go to state 79

    $default  reduce using rule 37 (prec_2)


State 62

   30 prec_1: prec_1 . PLUSPLUS
   31       | prec_1 . MINUSMINUS
   38 prec_2: SIZEOF prec_1 .

    PLUSPLUS    shift, and go to state 78
    MINUSMINUS  shift, and go to state 79

    $default  reduce using rule 38 (prec_2)


State 63

   49 quals: AUTO .

    $default  reduce using rule 49 (quals)


State 64

   50 quals: STATIC .

    $default  reduce using rule 50 (quals)


State 65

   48 quals: UNSIGNED .

    $default  reduce using rule 48 (quals)


State 66

   51 quals: VOLATILE .

    $default  reduce using rule 51 (quals)


State 67

   46 prec_3: '(' types . ')' prec_3

    ')'  shift, and go to state 114


State 68

   47 types: quals . prim_types

    INT    shift, and go to state 115
    LONG   shift, and go to state 116
    SHORT  shift, and go to state 117

    prim_types  go to state 118


State 69

   27 prec_1: '(' expr . ')'
   93 expr: expr . ',' prec_14

    ','  shift, and go to state 107
    ')'  shift, and go to state 119


State 70

   30 prec_1: prec_1 . PLUSPLUS
   31       | prec_1 . MINUSMINUS
   39 prec_2: '~' prec_1 .
